First pass at parser and lexer

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -28,6 +28,7 @@
   <extensions defaultExtensionNs="com.intellij">
     <!-- Add your extensions here -->
     <fileTypeFactory implementation="com.oliverlockwood.plugins.jenkinsfile.JenkinsFileTypeFactory" />
+    <lang.parserDefinition language="Jenkins" implementationClass="com.oliverlockwood.plugins.jenkinsfile.JenkinsParserDefinition"/>
   </extensions>
 
   <actions>
